--- a/views/Log-in.css
+++ b/views/Log-in.css
@@ -1,7 +1,7 @@
 body {
   background-image: url("images/r.png");
   background-size: cover;
-  font-family: Montserrat;
+  font-family:"Poppins", sans-serif;
   margin: 0;
 }
 
