--- a/views/ListProd.ejs
+++ b/views/ListProd.ejs
@@ -151,6 +151,9 @@
                     <a class="nav-link" href="/mydevices">My Devices</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/policyprod">Policy Of Products</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link logout" href="/Log-out">Logout</a>
                 </li>
             </ul>
